# analyze-apple-health

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  1xml2csv.py  2analyze.py  README.md  cspell-words.txt  cspell.config.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: check.yml  test-python-app.yml
scripts/: run_pre-commit.sh  run_ruff.sh  update.sh
src/: s1_xml2csv.py  s2_analyze.py
